Добавлена связь между пользователями и задачами:
- Создана альтер-миграция для добавления поля user_id в таблицу tasks с внешним ключом и каскадным удалением
- Обновлены структуры User и Task: добавлено поле UserID и слайс Tasks соответственно
- Обновлен openapi.yaml
- Добавлен метод GetTasksForUser в userService для получения задач конкретного пользователя
- Обновлён taskService для установки user_id при создании задачи
